Refined image loading logic, using string resources for output text

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,7 +2,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@drawable/background">
 
     <!-- Recycler view to add movies upon search -->
     <android.support.v7.widget.RecyclerView
@@ -14,9 +15,9 @@
         android:id="@+id/movie_error_message_display"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="18dp"
-        android:text="An error has occurred. Please try again by clicking REFRESH"
-        android:textSize="20sp"
+        android:padding="@dimen/sub_heading"
+        android:text="@string/error_message_no_resource"
+        android:textSize="@dimen/main_heading_size"
         android:visibility="invisible" />
 
     <ProgressBar
