--- a/app/src/main/res/layout/activity_movie_info.xml
+++ b/app/src/main/res/layout/activity_movie_info.xml
@@ -11,23 +11,70 @@
     tools:context="com.udacity.android.popularmoviess1.MovieInfoActivity"
     android:orientation="vertical">
 
-    <TextView
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/movie_info_title"
-        android:textSize="18sp"
-        android:textStyle="bold"/>
+        android:orientation="horizontal">
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/movie_info_poster"
+            android:visibility="gone"
+            android:layout_gravity="top|center"
+            android:contentDescription="@string/movie_poster" />
 
-    <ImageView
+        <!-- this layout contains title, year, rating and popularity -->
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:paddingStart="@dimen/child_layout_padding"
+            android:paddingEnd="@dimen/child_layout_padding">
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/movie_info_title"
+                android:textSize="@dimen/main_heading_size"
+                android:textStyle="bold"/>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/movie_info_rating"
+                android:textSize="@dimen/text_content_size"
+                android:paddingTop="@dimen/rating_padding_top"
+                android:paddingBottom="@dimen/rating_padding_bottom"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/movie_info_popularity"
+                android:textSize="@dimen/text_content_size"
+                android:paddingTop="@dimen/text_content_padding_top"
+                android:paddingBottom="@dimen/text_content_padding_bottom"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/movie_release_date"
+                android:textSize="@dimen/text_content_size"
+                android:paddingTop="@dimen/text_content_padding_top"
+                android:paddingBottom="@dimen/text_content_padding_bottom"/>
+        </LinearLayout>
+
+    </LinearLayout>
+
+
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/movie_info_poster"
-        android:visibility="gone"
-        android:layout_gravity="top|center" />
-
+        android:textSize="@dimen/sub_heading"
+        android:text="@string/overview"
+        android:textStyle="bold"
+        android:paddingTop="@dimen/overview_heading_padding_top"/>
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/movie_info_overview"
-        android:textSize="14sp"/>
+        android:textSize="@dimen/text_content_size"/>
+
 </LinearLayout>
