--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,13 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="sub_heading">18sp</dimen>
+    <dimen name="main_heading_size">20sp</dimen>
+    <dimen name="text_content_size">16sp</dimen>
+    <dimen name="overview_heading_padding_top">20dp</dimen>
+    <dimen name="text_content_padding_top">5dp</dimen>
+    <dimen name="text_content_padding_bottom">5dp</dimen>
+    <dimen name="rating_padding_top">10dp</dimen>
+    <dimen name="rating_padding_bottom">10dp</dimen>
+    <dimen name="child_layout_padding">10dp</dimen>
 </resources>
