--- a/app/src/main/res/layout-w820dp/activity_movie_info.xml
+++ b/app/src/main/res/layout-w820dp/activity_movie_info.xml
@@ -5,5 +5,4 @@
     android:name="com.udacity.android.popularmoviess1.MovieInfoFragment"
     tools:layout="@layout/fragment_movie_info"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    />
+    android:layout_height="match_parent"/>
