Recyclerview for review section in MovieInfo Fragment  TODO: Add trailers section and layout for reviews

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -12,4 +12,5 @@
     <dimen name="rating_padding_top">10dp</dimen>
     <dimen name="rating_padding_bottom">5dp</dimen>
     <dimen name="child_layout_padding">10dp</dimen>
+    <dimen name="text_margin">16dp</dimen>
 </resources>
