--- a/app/src/main/res/layout/fragment_movie_info.xml
+++ b/app/src/main/res/layout/fragment_movie_info.xml
@@ -1,6 +1,7 @@
 <android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_height="match_parent"
-    android:layout_width="match_parent">
+    android:layout_width="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
@@ -21,6 +22,7 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             >
+
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -64,6 +66,27 @@
                     android:textSize="@dimen/text_content_size"
                     android:paddingTop="@dimen/text_content_padding_top"
                     android:paddingBottom="@dimen/text_content_padding_bottom"/>
+                <!--<ToggleButton
+                    android:id="@+id/favorite_button"
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
+                    android:src="@android:drawable/btn_star"
+                    android:background="#00ffffff"
+                    android:textOn=""
+                    android:textOff=""/>-->
+
+                <com.github.ivbaranov.mfb.MaterialFavoriteButton
+                    android:id="@+id/favorite_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:mfb_animate_favorite="true"
+                    app:mfb_animate_unfavorite="false"
+                    app:mfb_rotation_duration="400"
+                    app:mfb_rotation_angle="360"
+                    app:mfb_bounce_duration="300"
+                    app:mfb_size="48"
+                    app:mfb_favorite_image="@android:drawable/btn_star_big_on"
+                    app:mfb_not_favorite_image="@android:drawable/btn_star_big_off"/>
             </LinearLayout>
 
         </LinearLayout>
