--- a/app/src/main/res/layout/fragment_trailer.xml
+++ b/app/src/main/res/layout/fragment_trailer.xml
@@ -4,11 +4,13 @@
     android:layout_height="wrap_content"
     android:orientation="horizontal">
 
+
     <TextView
         android:id="@+id/id"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/text_margin"
+        android:background="@android:drawable/ic_media_play"
         android:textAppearance="?attr/textAppearanceListItem" />
 
     <TextView
