--- a/app/src/main/res/layout/fragment_movie_info.xml
+++ b/app/src/main/res/layout/fragment_movie_info.xml
@@ -1,9 +1,10 @@
 <android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_height="match_parent"
     android:layout_width="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/activity_movie_info"
         android:layout_width="match_parent"
@@ -12,63 +13,185 @@
         android:orientation="vertical"
         >
 
-        <TextView
-            android:id="@+id/movie_info_title"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_gravity="start"
-            android:layout_weight="1"
-            android:background="@color/primary"
-            android:gravity="start"
-            android:textSize="@dimen/main_heading_size"
-            android:textStyle="bold"
-            />
-
-
-        <LinearLayout
-            android:layout_width="match_parent"
+        <com.github.ivbaranov.mfb.MaterialFavoriteButton
+            android:id="@+id/favorite_button"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            >
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:mfb_animate_favorite="true"
+            app:mfb_animate_unfavorite="false"
+            app:mfb_bounce_duration="300"
+            app:mfb_favorite_image="@android:drawable/btn_star_big_on"
+            app:mfb_not_favorite_image="@android:drawable/btn_star_big_off"
+            app:mfb_rotation_angle="360"
+            app:mfb_rotation_duration="400"
+            app:mfb_size="48"
+            tools:layout_editor_absoluteX="312dp" />
 
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/movie_info_poster"
-                android:visibility="gone"
-                android:layout_gravity="top|center"
-                android:contentDescription="@string/movie_poster" />
+        <ImageView
+            android:id="@+id/movie_info_poster"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="top|center"
+            android:contentDescription="@string/movie_poster"
+            android:src="@drawable/image_not_found"
+            android:visibility="visible"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/favorite_button" />
+
 
             <!-- this layout contains title, year, rating and popularity -->
-            <LinearLayout
+        <LinearLayout
+            android:layout_width="344dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:gravity="center_horizontal"
+            android:orientation="vertical"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/movie_info_poster"
+            tools:layout_editor_absoluteX="8dp">
+
+            <TextView
+                android:id="@+id/movie_info_title"
+                android:layout_width="wrap_content"
+                android:layout_height="0dp"
+                android:layout_gravity="center_horizontal"
+                android:layout_weight="1"
+                android:background="@color/primary"
+                android:gravity="center_horizontal"
+                android:text="Movie Title"
+                android:textSize="@dimen/main_heading_size"
+                android:textStyle="bold"
+                tools:layout_editor_absoluteX="8dp"
+                tools:layout_editor_absoluteY="81dp" />
+
+            <TextView
+                android:id="@+id/movie_info_rating"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:paddingStart="@dimen/child_layout_padding"
-                android:paddingEnd="@dimen/child_layout_padding">
+                android:layout_gravity="center_horizontal"
+                android:gravity="center_horizontal"
+                android:paddingBottom="@dimen/rating_padding_bottom"
+                android:paddingTop="@dimen/rating_padding_top"
+                android:text="Movie Rating"
+                android:textSize="@dimen/text_content_size" />
 
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/movie_info_rating"
-                    android:textSize="@dimen/text_content_size"
-                    android:paddingTop="@dimen/rating_padding_top"
-                    android:paddingBottom="@dimen/rating_padding_bottom"/>
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/movie_info_popularity"
-                    android:textSize="@dimen/text_content_size"
-                    android:paddingTop="@dimen/text_content_padding_top"
-                    android:paddingBottom="@dimen/text_content_padding_bottom"/>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/movie_release_date"
-                    android:textSize="@dimen/text_content_size"
-                    android:paddingTop="@dimen/text_content_padding_top"
-                    android:paddingBottom="@dimen/text_content_padding_bottom"/>
-                <!--<ToggleButton
+            <TextView
+                android:id="@+id/movie_info_popularity"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_horizontal"
+                android:paddingBottom="@dimen/text_content_padding_bottom"
+                android:paddingTop="@dimen/text_content_padding_top"
+                android:text="Popularity"
+                android:textSize="@dimen/text_content_size" />
+
+            <TextView
+                android:id="@+id/movie_release_date"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingBottom="@dimen/text_content_padding_bottom"
+                android:paddingTop="@dimen/text_content_padding_top"
+                android:text="Release date"
+                android:textSize="@dimen/text_content_size" />
+
+            <TextView
+                android:id="@+id/movie_info_overview"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="start"
+                android:text="overview"
+                android:textSize="@dimen/text_content_size"
+                tools:layout_editor_absoluteX="8dp"
+                tools:layout_editor_absoluteY="648dp" />
+
+            <View
+                android:id="@+id/view2"
+                android:layout_width="0dp"
+                android:layout_height="2dp"
+                android:background="#c0c0c0"
+                tools:layout_editor_absoluteX="0dp"
+                tools:layout_editor_absoluteY="648dp" />
+
+            <TextView
+                android:id="@+id/trailer_list_title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingTop="@dimen/overview_heading_padding_top"
+                android:text="@string/trailers"
+                android:textSize="@dimen/sub_heading"
+                android:textStyle="bold"
+                android:visibility="visible"
+                tools:layout_editor_absoluteX="0dp"
+                tools:layout_editor_absoluteY="648dp" />
+
+            <TextView
+                android:id="@+id/trailers_not_available"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingTop="@dimen/overview_heading_padding_top"
+                android:text="@string/no_trailers_available_yet"
+                android:textSize="@dimen/sub_heading"
+                android:textStyle="normal"
+                android:visibility="gone"
+                tools:layout_editor_absoluteX="0dp"
+                tools:layout_editor_absoluteY="648dp" />
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/trailer_list"
+                android:name="com.udacity.android.tmdb.TrailerFragment"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                app:layoutManager="LinearLayoutManager"
+                tools:layout_editor_absoluteX="8dp"
+                tools:layout_editor_absoluteY="575dp">
+
+            </android.support.v7.widget.RecyclerView>
+
+            <View
+                android:id="@+id/view3"
+                android:layout_width="0dp"
+                android:layout_height="2dp"
+                android:background="#c0c0c0"
+                tools:layout_editor_absoluteX="0dp"
+                tools:layout_editor_absoluteY="648dp" />
+
+            <TextView
+                android:id="@+id/movie_info_reviews_title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingTop="@dimen/overview_heading_padding_top"
+                android:text="@string/reviews"
+                android:textSize="@dimen/sub_heading"
+                android:textStyle="bold"
+                android:visibility="visible"
+                tools:layout_editor_absoluteX="0dp"
+                tools:layout_editor_absoluteY="648dp" />
+
+            <TextView
+                android:id="@+id/reviews_not_available"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingTop="@dimen/overview_heading_padding_top"
+                android:text="@string/no_reviews_available_yet"
+                android:textSize="@dimen/sub_heading"
+                android:textStyle="normal"
+                android:visibility="gone"
+                tools:layout_editor_absoluteX="0dp"
+                tools:layout_editor_absoluteY="648dp" />
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/review_list"
+                android:name="com.udacity.android.tmdb.ReviewFragment"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                app:layoutManager="LinearLayoutManager"
+                tools:layout_editor_absoluteX="8dp"
+                tools:layout_editor_absoluteY="575dp" />
+            <!--<ToggleButton
                     android:id="@+id/favorite_button"
                     android:layout_width="60dp"
                     android:layout_height="60dp"
@@ -77,21 +200,8 @@
                     android:textOn=""
                     android:textOff=""/>-->
 
-                <com.github.ivbaranov.mfb.MaterialFavoriteButton
-                    android:id="@+id/favorite_button"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    app:mfb_animate_favorite="true"
-                    app:mfb_animate_unfavorite="false"
-                    app:mfb_rotation_duration="400"
-                    app:mfb_rotation_angle="360"
-                    app:mfb_bounce_duration="300"
-                    app:mfb_size="48"
-                    app:mfb_favorite_image="@android:drawable/btn_star_big_on"
-                    app:mfb_not_favorite_image="@android:drawable/btn_star_big_off"/>
-            </LinearLayout>
-
         </LinearLayout>
+
 
         <!--<TextView
             android:layout_width="wrap_content"
@@ -102,11 +212,6 @@
             android:visibility="gone"
             android:textStyle="bold"
             android:paddingTop="@dimen/overview_heading_padding_top"/>-->
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/movie_info_overview"
-            android:textSize="@dimen/text_content_size"/>
 
 
         <!--<LinearLayout
@@ -131,76 +236,6 @@
 
         </LinearLayout>-->
 
-        <View
-            android:layout_width="fill_parent"
-            android:layout_height="2dp"
-            android:background="#c0c0c0"/>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="@dimen/sub_heading"
-            android:text="@string/trailers"
-            android:id="@+id/trailer_list_title"
-            android:visibility="visible"
-            android:textStyle="bold"
-            android:paddingTop="@dimen/overview_heading_padding_top"/>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="@dimen/sub_heading"
-            android:text="@string/no_trailers_available_yet"
-            android:id="@+id/trailers_not_available"
-            android:visibility="gone"
-            android:textStyle="normal"
-            android:paddingTop="@dimen/overview_heading_padding_top"/>
-
-        <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:app="http://schemas.android.com/apk/res-auto"
-            xmlns:tools="http://schemas.android.com/tools"
-            android:id="@+id/trailer_list"
-            android:name="com.udacity.android.tmdb.TrailerFragment"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:layoutManager="LinearLayoutManager"
-            />
-
-        <View
-            android:layout_width="fill_parent"
-            android:layout_height="2dp"
-            android:background="#c0c0c0"/>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="@dimen/sub_heading"
-            android:text="@string/reviews"
-            android:id="@+id/movie_info_reviews_title"
-            android:visibility="visible"
-            android:textStyle="bold"
-            android:paddingTop="@dimen/overview_heading_padding_top"/>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="@dimen/sub_heading"
-            android:text="@string/no_reviews_available_yet"
-            android:id="@+id/reviews_not_available"
-            android:visibility="gone"
-            android:textStyle="normal"
-            android:paddingTop="@dimen/overview_heading_padding_top"/>
-
-        <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:app="http://schemas.android.com/apk/res-auto"
-            xmlns:tools="http://schemas.android.com/tools"
-            android:id="@+id/review_list"
-            android:name="com.udacity.android.tmdb.ReviewFragment"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:layoutManager="LinearLayoutManager"
-            />
-
-    </LinearLayout>
+    </android.support.constraint.ConstraintLayout>
 
 </android.support.v4.widget.NestedScrollView>
