--- a/app/src/main/res/layout/fragment_movie_info.xml
+++ b/app/src/main/res/layout/fragment_movie_info.xml
@@ -68,7 +68,16 @@
                 tools:layout_editor_absoluteX="8dp"
                 tools:layout_editor_absoluteY="81dp" />
 
-            <TextView
+            <RatingBar
+                android:id="@+id/movie_info_rating"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:isIndicator="true"
+                android:progressTint="#ffea00"
+                android:secondaryProgressTint="#ffea00" />
+
+            <!--<TextView
                 android:id="@+id/movie_info_rating"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -77,7 +86,7 @@
                 android:paddingBottom="@dimen/rating_padding_bottom"
                 android:paddingTop="@dimen/rating_padding_top"
                 android:text="Movie Rating"
-                android:textSize="@dimen/text_content_size" />
+                android:textSize="@dimen/text_content_size" />-->
 
             <TextView
                 android:id="@+id/movie_info_popularity"
