--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -10,7 +10,9 @@
     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/recycler_view_movies"/>
+        android:id="@+id/recycler_view_movies"
+        android:clipToPadding="false"
+        />
 
     <TextView
         android:id="@+id/movie_error_message_display"
