--- a/app/src/main/res/layout/fragment_movie_info.xml
+++ b/app/src/main/res/layout/fragment_movie_info.xml
@@ -70,8 +70,8 @@
 
             <RatingBar
                 android:id="@+id/movie_info_rating"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="233dp"
+                android:layout_height="43dp"
                 android:layout_gravity="center_horizontal"
                 android:isIndicator="true"
                 android:progressTint="#ffea00"
@@ -96,7 +96,8 @@
                 android:paddingBottom="@dimen/text_content_padding_bottom"
                 android:paddingTop="@dimen/text_content_padding_top"
                 android:text="Popularity"
-                android:textSize="@dimen/text_content_size" />
+                android:textSize="@dimen/text_content_size"
+                android:visibility="gone" />
 
             <TextView
                 android:id="@+id/movie_release_date"
@@ -154,6 +155,7 @@
                 android:name="com.udacity.android.tmdb.TrailerFragment"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:orientation="horizontal"
                 app:layoutManager="LinearLayoutManager"
                 tools:layout_editor_absoluteX="8dp"
                 tools:layout_editor_absoluteY="575dp">
