--- a/app/src/main/res/layout/fragment_trailer.xml
+++ b/app/src/main/res/layout/fragment_trailer.xml
@@ -9,7 +9,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/text_margin"
-        android:background="@android:drawable/ic_media_play"
+        android:background="@drawable/youtube"
         android:textAppearance="?attr/textAppearanceListItem" />
 
     <TextView
