--- a/app/src/main/res/layout-land/activity_movie_info.xml
+++ b/app/src/main/res/layout-land/activity_movie_info.xml
@@ -5,4 +5,5 @@
     android:name="com.udacity.android.tmdb.MovieInfoFragment"
     tools:layout="@layout/fragment_movie_info"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"/>
+    android:layout_height="match_parent"
+    />
