--- a/app/src/main/res/layout/fragment_movie_info.xml
+++ b/app/src/main/res/layout/fragment_movie_info.xml
@@ -13,6 +13,14 @@
         android:orientation="vertical"
         >
 
+        <ProgressBar
+            android:id="@+id/movie_info_loading_indicator"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            style="@style/AppTheme"
+            android:visibility="gone"
+            android:layout_centerInParent="true"/>
+
         <com.github.ivbaranov.mfb.MaterialFavoriteButton
             android:id="@+id/favorite_button"
             android:layout_width="wrap_content"
@@ -145,7 +153,7 @@
                 android:id="@+id/trailer_list_title"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:paddingTop="@dimen/overview_heading_padding_top"
+                android:paddingTop="16dp"
                 android:text="@string/trailers"
                 android:textSize="@dimen/sub_heading"
                 android:textStyle="bold"
@@ -189,7 +197,7 @@
                 android:id="@+id/movie_info_reviews_title"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:paddingTop="@dimen/overview_heading_padding_top"
+                android:paddingTop="16dp"
                 android:text="@string/reviews"
                 android:textSize="@dimen/sub_heading"
                 android:textStyle="bold"
